examples/test/testpolicy18300.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18300
  namespace: namespace87
spec:
  podSelector:
    matchLabels:
      key26: value28
      key19: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value31
      podSelector:
        matchLabels:
          key1: value27
          key18: value38
